eb_core/src/parser/snapshots/eb_core__parser__function__test__parse1.snap
---
source: src/parser/function.rs
expression: "parse(&mut ctx).expect(\"fail to parse\")"

---
Node {
    name: "f",
    params: [],
    body: [],
    loc: Location(
        0,
    ),
}
